--- a/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
@@ -58,9 +58,11 @@
                 <h3 class="card-title">View Plan Details</h3>
                 <div class="d-flex align-items-center">
                   <h6 class="mr-1 mb-0">Filters:-</h6>
-                  <input type="text" class="form-control mr-1 filter_css" placeholder="Vendor Name ">
-                  <input type="text" class="form-control mr-1 filter_css" placeholder="Date ">
-                  <input type="text" class="form-control mr-1 filter_css" placeholder="Status ">
+                  <input type="text" [(ngModel)]="vendorName" class="form-control mr-1 filter_css" placeholder="Vendor Name ">
+                  <input type="date" [(ngModel)]="plannedStartDate" class="form-control mr-1 filter_css" placeholder="Date ">
+                  <input type="text" [(ngModel)]="statusName" class="form-control mr-1 filter_css" placeholder="Status ">
+                  <button type="button" (click)="filter()" class="form-control mr-1 filter_css btn btn-primary">Submit </button>
+                  <button type="button" (click)="reset()" class="form-control mr-1 filter_css btn btn-secondary">Reset</button>
                   <!-- <button class="btn btn-success d-flex  align-items-center">
                     <i class="fas fa-upload mr-1 upload_ico"></i>
                     <span class="now_rap">Upload Plan</span>
@@ -84,7 +86,7 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr class="tbody_data" *ngFor="let item of viewPlanObj  ">
+                    <tr class="tbody_data" *ngFor="let item of viewPlanListToShow">
                       <td>{{item.vendorCode}}</td>
                       <td>{{item.vendorName}}</td>
                       <td>{{item.locationName}}</td>
@@ -94,7 +96,7 @@
                       <td><p class="pend_coloe  backgr_blue">{{item.status}} </p></td>
                       <td *ngIf="isSuperAdmin || isPlanner">
                         <a (click)="viewPlan(item)"><img src="../../../../assets/icon/view.png" class="viwe_iamge"></a>
-                        <a *ngIf="isSuperAdmin" (click)="assign()" data-toggle="tooltip" data-placement="top" title="Add Auditor"><img src="../../../../assets/icons/audit.png" class="viwe_iamge"></a>
+                        <a *ngIf="isSuperAdmin" (click)="assign(item)" data-toggle="tooltip" data-placement="top" title="Add Auditor"><img src="../../../../assets/icons/audit.png" class="viwe_iamge"></a>
                       </td>
                     </tr>
                   </tbody>
