--- a/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
@@ -84,7 +84,7 @@
                             <button class="btn btn-danger mr-1"  data-toggle="modal" data-target="#executive-summary"> 
                                Executive Summary </button>
                             <button class="btn btn-success mr-1" data-toggle="modal"
-                                data-target="#exampleModal">Submit</button>
+                                data-target="#submit">Submit</button>
                             <button (click)="back()" class="btn btn-default">Back</button>
                         </div>
                     </div>
@@ -168,6 +168,35 @@
                             </div>
                         </div>
                       </div>
+                </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="submit" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Approval</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <div class="form-group">
+                <label> Select Section Head</label>
+                <select class="form-control">
+                <option>option 1</option>
+                <option>option 2</option>
+                <option>option 3</option>
+                <option>option 4</option>
+                <option>option 5</option>
+                </select>
                 </div>
         </div>
         <div class="modal-footer">
