--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -86,7 +86,7 @@
                   </p>
                 </a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item" *ngIf="!isVendor">
                 <a routerLink="/dashboard/view-plan" class="nav-link">
                   <img src="../../assets/icons/view.png" class="side_img">
                   <p>
@@ -131,7 +131,7 @@
               </li>
               </ul>
           </li>
-          <li class="nav-item" *ngIf="!isAuditor">
+          <li class="nav-item" *ngIf="!isAuditor && !isVendor">
             <a class="nav-link">
               <i class="nav-icon fas fa-tachometer-alt"></i>
               <p>
