--- a/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
@@ -12,7 +12,7 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-sm-12">
-                                <div class="table-responsive">
+                                <div class="table-responsive max_hei_table">
                                 <table class="table table-bordered">
                                     <thead>
                                         <tr class="text-center">
@@ -117,6 +117,7 @@
                         <div class="card-body">
                           <div class="row">
                             <div class="col-sm-12">
+                                <div class="table-responsive max_hei_table">
                                 <table class="table table-bordered">
                                     <thead>
                                         <tr class="sticky_header">
@@ -141,13 +142,14 @@
                                         </tr>
                                     </tbody>
                                 </table>
+                                </div>
                             </div>
                         </div> 
                         </div>
                       </div>
                       <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                         <div class="card-body">
-                         <div class="table-responsive">
+                         <div class="table-responsive max_hei_table">
                             <table class="table table-bordered">
                                 <thead>
                                     <tr class="sticky_header">
