--- a/src/app/dashboard/manage-audit/manage-audit.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit.component.html
@@ -21,7 +21,8 @@
             </div>
           </div>
           <div class="card-body">
-            <div class="table-responsive">
+           
+            <div class="table-responsive max_hei_table">
               <table class="table table-bordered">
                 <thead class="bac_table_white">
                   <tr class="now_rap text-center sticky_header">
@@ -114,7 +115,7 @@
             </div>
           </div>
           <div class="card-body">
-            <div class="table-responsive">
+            <div class="table-responsive max_hei_table">
               <table class="table table-bordered">
                 <thead class="bac_table_white">
                   <tr class="text-center ">
@@ -192,6 +193,7 @@
 
 
             </div>
+            <div class="table-responsive max_hei_table">
             <table class="table table-borderd">
               <thead>
                 <tr class="now_rap text-center sticky_header">
@@ -205,6 +207,7 @@
                 </tr>
               </thead>
             </table>
+            </div>
 
             <p class="mb-1 mt-2"><b>Supplier category is "Yellow". Major improvement areas are as follows:-</b></p>
             <p>
@@ -235,7 +238,7 @@
           <div class="card-body">
             <div class="row">
               <div class="col-sm-6">
-                <div class="table-responsive">
+                <div class="table-responsive max_hei_table">
                   <table class="table table-bordered">
                     <thead class="bac_table_white">
                       <tr class="">
@@ -325,7 +328,7 @@
                   </table>
                 </div>
 
-                <div class="table-responsive">
+                <div class="table-responsive max_hei_table">
                   <table class="table table-bordered">
                     <thead class="bac_table_white">
                       <tr class="">
@@ -338,7 +341,7 @@
               </div>
 
               <div class="col-sm-6">
-                <div class="table-responsive">
+                <div class="table-responsive max_hei_table">
                   <table class="table table-bordered">
                     <thead class="bac_table_white">
                       <tr class="">
@@ -360,7 +363,7 @@
                     </thead>
                   </table>
                 </div>
-                <div class="table-responsive">
+                <div class="table-responsive max_hei_table">
                   <table class="table table-bordered">
                     <thead class="bac_table_white">
                       <tr class="">
@@ -375,7 +378,7 @@
               </div>
             </div>
 
-            <div class="table-responsive">
+            <div class="table-responsive max_hei_table">
               <table class="table table-bordered">
                 <thead class="bac_table_white">
                   <tr class="">
