--- a/src/app/dashboard/manage-audit/manage-audit-question-details/manage-audit-question-details.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-question-details/manage-audit-question-details.component.html
@@ -76,7 +76,7 @@
                                               </div>
                                             </div>
                                           </div>
-          
+          <div class="table-responsive max_hei_table">
                                           <table class="table table-bordered">
                                             <thead>
                                               <tr>
@@ -108,6 +108,7 @@
           
                                             </tbody>
                                           </table>
+                                        </div>
                                         </div>
                                       </div><!--row end-->
                                     </div>
@@ -141,7 +142,7 @@
                                               </div>
                                             </div>
                                           </div>
-          
+          <div class="table-responsive max_hei_table">
                                           <table class="table table-bordered">
                                             <thead>
                                               <tr>
@@ -173,6 +174,7 @@
           
                                             </tbody>
                                           </table>
+                                          </div>
                                         </div>
                                       </div><!--row end-->
                                     </div>
@@ -209,7 +211,7 @@
                                               </div>
                                             </div>
                                           </div>
-          
+          <div class="table-responsive max_hei_table">
                                           <table class="table table-bordered">
                                             <thead>
                                               <tr>
@@ -241,6 +243,7 @@
           
                                             </tbody>
                                           </table>
+                                          </div>
                                         </div>
                                       </div><!--row end-->
                                     </div>
@@ -281,6 +284,7 @@
                                               </div>
                                             </div>
                                           </div>
+                                          <div class="table-responsive max_hei_table">
           
                                           <table class="table table-bordered">
                                             <thead>
@@ -313,6 +317,7 @@
           
                                             </tbody>
                                           </table>
+                                          </div>
                                         </div>
                                       </div><!--row end-->
                                     </div>
@@ -350,7 +355,7 @@
                                               </div>
                                             </div>
                                           </div>
-          
+          <div class="table-responsive max_hei_table">
                                           <table class="table table-bordered">
                                             <thead>
                                               <tr>
@@ -382,6 +387,7 @@
           
                                             </tbody>
                                           </table>
+                                          </div>
                                         </div>
                                       </div><!--row end-->
                                     </div>
