--- a/src/app/dashboard/masters/employee/employee-list/employee-list.component.html
+++ b/src/app/dashboard/masters/employee/employee-list/employee-list.component.html
@@ -11,7 +11,7 @@
               </div>
             </div>
             <div class="card-body">
-              <div class="table-responsive">
+              <div class="table-responsive max_hei_table">
                 <table id="example2" class="table table-bordered table-hover">
                   <thead>
                     <tr class="sticky_header">
