--- a/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
@@ -118,7 +118,7 @@
                         <div class="card-body">
                           <div class="row">
                             <div class="col-sm-12">
-                                <div class="table-responsive max_hei_table"></div>
+                                <div class="table-responsive max_hei_table">
                                 <table class="table table-bordered" formArrayName="vendorAttendee">
                                     <thead>
                                         <tr class="sticky_header">
@@ -160,6 +160,7 @@
                                         </tr> -->
                                     </tbody>
                                 </table>
+                                </div>
                                 </div>
                             </div>
                         </div> 
