--- a/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
@@ -165,7 +165,7 @@
                             </div>
                         </div> 
                         </div>
-                      </div>
+                      
                       <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                         <div class="card-body">
                          <div class="table-responsive max_hei_table">
@@ -203,6 +203,7 @@
                             </div>
                         </div>
                       </div>
+                    </form>
                 </div>
         </div>
         <div class="modal-footer">
