--- a/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
@@ -163,6 +163,11 @@
                                 </div>
                                 </div>
                             </div>
+                        </div>
+                        <div class="card-footer">
+                         
+                          <button type="button" class="btn btn-primary mr-1">Save changes</button>
+                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                         </div> 
                         </div>
                       
@@ -202,14 +207,16 @@
                                         </table>
                             </div>
                         </div>
+                        <div class="card-footer">
+                         
+                          <button type="button" class="btn btn-primary mr-1">Save changes</button>
+                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        </div>
                       </div>
                     </form>
                 </div>
         </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
+       
       </div>
     </div>
   </div>
