--- a/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
@@ -63,10 +63,6 @@
                   <input type="text" [(ngModel)]="statusName" class="form-control mr-1 filter_css" placeholder="Status ">
                   <button type="button" (click)="filter()" class="form-control mr-1 filter_css btn btn-primary">Submit </button>
                   <button type="button" (click)="reset()" class="form-control mr-1 filter_css btn btn-secondary">Reset</button>
-                  <!-- <button class="btn btn-success d-flex  align-items-center">
-                    <i class="fas fa-upload mr-1 upload_ico"></i>
-                    <span class="now_rap">Upload Plan</span>
-                  </button> -->
                 </div>
               </div>
             </div>
@@ -93,7 +89,7 @@
                       <td>{{item.otherLocation}}</td>
                       <td>{{item.plannedStartDate | date:dateFormate}}</td>
                       <td>{{item.plannedEndDate | date:dateFormate}}</td>
-                      <td><p class="pend_coloe  backgr_blue">{{item.status}} </p></td>
+                      <td><p [ngClass]="item.status">{{item.status}} </p></td>
                       <td *ngIf="isSuperAdmin || isPlanner">
                         <a (click)="viewPlan(item)"><img src="../../../../assets/icon/view.png" class="viwe_iamge"></a>
                         <a *ngIf="isSuperAdmin" (click)="assign(item)" data-toggle="tooltip" data-placement="top" title="Add Auditor"><img src="../../../../assets/icons/audit.png" class="viwe_iamge"></a>
