--- a/src/app/dashboard/manage-audit/manage-audit-list/manage-audit-list.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-list/manage-audit-list.component.html
@@ -59,13 +59,11 @@
                                 <h3 class="card-title">Audit Area Details</h3>
                                 <div class="d-flex align-items-center">
                                     <h6 class="mr-1 mb-0">Filters:-</h6>
-                                    <input type="text" class="form-control mr-1 filter_css" placeholder="Vendor Name ">
-                                    <input type="text" class="form-control mr-1 filter_css" placeholder="Date ">
-                                    <input type="text" class="form-control mr-1 filter_css" placeholder="Status ">
-                                    <!-- <button class="btn btn-success d-flex  align-items-center">
-                                        <i class="fas fa-upload mr-1 upload_ico"></i>
-                                        <span class="now_rap">Upload Plan</span>
-                                    </button> -->
+                                    <input type="text" [(ngModel)]="vendorName" class="form-control mr-1 filter_css" placeholder="Vendor Name ">
+                                    <input type="date" [(ngModel)]="plannedStartDate" class="form-control mr-1 filter_css" placeholder="Date ">
+                                    <input type="text" [(ngModel)]="statusName" class="form-control mr-1 filter_css" placeholder="Status ">
+                                    <button type="button" (click)="filter()" class="form-control mr-1 filter_css btn btn-primary">Submit </button>
+                                    <button type="button" (click)="reset()" class="form-control mr-1 filter_css btn btn-secondary">Reset</button>
                                 </div>
                             </div>
                         </div>
@@ -74,7 +72,6 @@
                                 <table id="" class="table table-bordered table-hover">
                                     <thead>
                                         <tr class=" text-center sticky_header">
-                                          <!--   <th>Audit No</th> -->
                                             <th>Vendor Code </th>
                                             <th>Vendor Name</th>
                                             <th>Location</th>
@@ -87,18 +84,14 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr class="tbody_data" *ngFor="let item of viewPlanObj ">
-                                         <!--    <td>AU1</td> -->
+                                        <tr class="tbody_data" *ngFor="let item of viewPlanListToShow ">
                                          <td>{{item.vendorCode}}</td>
                                          <td>{{item.vendorName}}</td>
                                          <td>{{item.locationName}}</td>
                                          <td>{{item.otherLocation}}</td>
                                          <td>{{item.plannedStartDate | date:dateFormate}}</td>
                                          <td>{{item.plannedEndDate | date:dateFormate}}</td>
-                                         <td><p class="pend_coloe  backgr_blue">{{item.status}} </p></td>
-                                           <!--  <td>
-                                                <p class="pend_coloe backgr_blue">Complete </p>
-                                            </td> -->
+                                         <td><p [ngClass]="item.status">{{item.status}} </p></td>
                                             <td *ngIf="isAuditor || isPlanner">
                                                 <a (click)="viewManageAudit()"><img
                                                         src="../../../../assets/icon/view.png" class="viwe_iamge"></a>
@@ -108,26 +101,6 @@
                                                         src="../../../../assets/icons/auditini.png" class="viwe_iamge"></a>
                                             </td>
                                         </tr>
-                                        <!-- <tr class="tbody_data">
-                                            <td>AU1</td>
-                                            <td>VN123</td>
-                                            <td>Vendor</td>
-                                            <td>Location</td>
-                                            <td>Any Location</td>
-                                            <td>12-2-2022</td>
-                                            <td>12-4-2022</td>
-                                            <td>
-                                                <p class="pend_coloe  backgr_green">Approve </p>
-                                            </td>
-                                            <td *ngIf="isAuditor || isPlanner">
-                                                <a (click)="addAuditArea()"><img src="../../../../assets/icon/view.png"
-                                                        class="viwe_iamge"></a>
-                                            </td>
-                                            <td *ngIf="isAuditor">
-                                                <a (click)="addAuditArea()"><img src="../../../../assets/icons/auditini.png"
-                                                        class="viwe_iamge"></a>
-                                            </td>
-                                        </tr> -->
                                     </tbody>
                                 </table>
                             </div>
