--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -27,14 +27,14 @@
               </p>
             </a>
             <ul class="nav nav-treeview">
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a routerLink="/dashboard/vendor" class="nav-link">
                   <img src="../../assets/icons/lightbulb.png" class="side_img">
                   <p>
                     Vendor Master
                   </p>
                 </a>
-              </li>
+              </li> -->
               <li class="nav-item">
                 <a routerLink="/dashboard/employee" class="nav-link">
                   <img src="../../assets/icons/group.png" class="side_img">
