--- a/src/app/dashboard/action-plan/action-plan.component.html
+++ b/src/app/dashboard/action-plan/action-plan.component.html
@@ -280,7 +280,7 @@
                                             <th>DETAIL OF IMPROVEMENT PLAN</th>
                                             <th>IN-CHARGE</th>
                                             <th>DATE</th>
-                                            <th>RESULT OF VERIFICATION</th>
+                                            <!-- <th>RESULT OF VERIFICATION</th> -->
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -292,7 +292,7 @@
                                             <td><textarea class="form-control"></textarea></td>
                                             <td><textarea class="form-control"></textarea></td>
                                             <td><textarea class="form-control"></textarea></td>
-                                            <td><textarea class="form-control"></textarea></td>
+                                            <!-- <td><textarea class="form-control"></textarea></td> -->
                                             
                                         </tr>
                                         <tr class="tbody_data">
@@ -303,7 +303,7 @@
                                             <td><textarea class="form-control"></textarea></td>
                                             <td><textarea class="form-control"></textarea></td>
                                             <td><textarea class="form-control"></textarea></td>
-                                            <td><textarea class="form-control"></textarea></td>
+                                            <!-- <td><textarea class="form-control"></textarea></td> -->
                                             
                                         </tr>
                                     </tbody>
