--- a/src/app/dashboard/audit-plan/pending-action-plan/pending-action-plan.component.html
+++ b/src/app/dashboard/audit-plan/pending-action-plan/pending-action-plan.component.html
@@ -7,12 +7,18 @@
     </div>
     <div class="card-body">
        
+           <div>
            
+            </div>
         <div class="table-responsive max_hei_table" >
             <table id="" class="table table-bordered table-hover">
                 <thead>
                     <tr class="text-center">
-                        <th colspan="9">Observation(2)</th>
+                        <th colspan="9">Observation(2)
+                            <button class="btn btn-success mr-1">Accept</button>
+                            <button class="btn btn-danger">Reject</button>
+                        </th>
+
                     </tr>
                     <tr class=" text-center sticky_header fon_9">
                         <th>Observation</th>
@@ -22,7 +28,7 @@
                         <th>DETAIL OF IMPROVEMENT PLAN</th>
                         <th>IN-CHARGE</th>
                         <th>DATE</th>
-                        <th>RESULT OF VERIFICATION</th>
+                        <!-- <th>RESULT OF VERIFICATION</th> -->
                         <th>Action</th>
                     </tr>
                 </thead>
@@ -35,10 +41,9 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td></td>
+                        
                         <td>
-                            <button class="btn btn-success mr-1">Accept</button>
-                            <button class="btn btn-danger">Reject</button>
+                           <textarea class="form-control" placeholder="Enter your Remarks"></textarea>
                         </td>
                         
                     </tr>
@@ -50,11 +55,10 @@
                         <td></td>
                         <td></td>
                         <td></td>
-                        <td></td>
+                     
                         <td>
-                            <button class="btn btn-success mr-1">Accept</button>
-                            <button class="btn btn-danger">Reject</button>
-                        </td>
+                            <textarea class="form-control" placeholder="Enter your Remarks"></textarea>
+                         </td>
                         
                     </tr>
                 </tbody>
