--- a/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
@@ -23,7 +23,7 @@
                                             </th>
                                             <th>Complition Status
                                             </th>
-                                            <th>
+                                            <th class="w_226">
                                                 Score
                                             </th>
                                             </tr>
@@ -37,7 +37,7 @@
                                                 Production preparation
                                             </td>
                                             <td>
-                                                <p class="complition_status">4/5</p>
+                                                <p class="">4/5</p>
                                             </td>
                                             <td>
                                                 <div class="progress">
@@ -56,7 +56,7 @@
                                                     Regulation for initial production control 
                                                 </td>
                                                 <td>
-                                                    <p class="complition_status">3/5</p>
+                                                    <p class="">3/5</p>
                                                 </td>
                                                 <td>
                                                     <div class="progress">
@@ -244,7 +244,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
+          <button type="button" class="btn btn-success">Submit</button>
         </div>
       </div>
     </div>
