--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -106,7 +106,7 @@
                 <a routerLink="/dashboard/action-pending-plan" class="nav-link">
                   <img src="../../assets/icons/planning.png" class="side_img">
                   <p>
-                    Pending Action Plan
+                    RESULT OF VERIFICATION
                   </p>
                 </a>
               </li>
@@ -120,16 +120,15 @@
                 <i class="right fas fa-angle-left"></i>
               </p>
             </a>
-            <ul class="nav nav-treeview" *ngIf="isVendor">
-              <li class="nav-item">
-                <a routerLink="/dashboard/action-plan" class="nav-link">
-                  <img src="../../assets/icons/lightbulb.png" class="side_img">
-                  <p>
-                    Action Plan
-                  </p>
-                </a>
-              </li>
-              </ul>
+            
+          </li>
+          <li class="nav-item"  *ngIf="isVendor">
+            <a routerLink="/dashboard/action-plan" class="nav-link">
+              <img src="../../assets/icons/management.png" class="side_img">
+              <p>
+                Action Plan
+              </p>
+            </a>
           </li>
           <li class="nav-item" *ngIf="!isAuditor && !isVendor">
             <a class="nav-link">
