role dropdown & pending action plan routing

--- a/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
@@ -70,7 +70,7 @@
 
                <div class=" mr-1">
                     <label class="filter_label">To Date</label>
-                  <input type="date" [(ngModel)]="plannedStartDate" class="form-control filter_css" placeholder="Date ">
+                  <input type="date" [(ngModel)]="plannedEndDate" class="form-control filter_css" placeholder="Date ">
                 </div>
 
                <div class=" mr-1">
@@ -112,7 +112,7 @@
                       <td>{{item.otherLocation}}</td>
                       <td>{{item.plannedStartDate | date:dateFormate}}</td>
                       <td>{{item.plannedEndDate | date:dateFormate}}</td>
-                      <td><button class="btn btn-primary">To be Received</button></td>
+                      <td><button class="btn btn-primary" (click)="pendingAction()">To be Received</button></td>
                       <td><p [ngClass]="item.status">{{item.status}} </p></td>
                       <td *ngIf="isSuperAdmin || isPlanner">
                         <a (click)="viewPlan(item)"><img src="../../../../assets/icon/view.png" class="viwe_iamge"></a>
