--- a/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-question-category/manage-audit-question-category.component.html
@@ -28,8 +28,8 @@
                                             </th>
                                             </tr>
                                         </thead>
-                                        <tbody   >
-                                            <tr class="text-center" *ngFor="let item of categoryScoreList; let i =index;" (click)="details()">
+                                        <tbody (click)="details()"  >
+                                            <tr class="text-center" *ngFor="let item of categoryScoreList; let i =index;" >
                                             <td>
                                                 {{i+1}}
                                             </td>
