--- a/src/app/dashboard/reports/vendor-wise-score/vendor-wise-score.component.html
+++ b/src/app/dashboard/reports/vendor-wise-score/vendor-wise-score.component.html
@@ -1,1 +1,35 @@
-<p>vendor-wise-score works!</p>
+<section class="content p-3">
+    <div class="row">
+        <div class="col-md-12 p-0">
+            <div class="card card-default">
+                <div class="card-body">
+                    <div class="row">
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <label class="form_label">Filter</label>
+                                <select class="form-control" name="filter" [(ngModel)]="selectedFilter"
+                                    (change)='onFilterSelected()'>
+                                    <option value="vendor">Vendor Name/Code</option>
+                                    <option value="commodity">Commodity</option>
+                                    <option value="category">Category – R/Y/G</option>
+                                    <option value="defects">No. of Defects</option>
+                                    <option value="location">Location</option>
+                                    <option value="year">Audit Year</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-8">
+                            <canvas baseChart [data]="yearWiseVSAData" height="200%" [type]="'line'" [options]="yearWiseVSAOptions">
+                            </canvas>
+                        </div>
+                        <div class="col-md-2">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
