--- a/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
@@ -98,8 +98,10 @@
                       <th>Any Other Location</th>
                       <th>Planned Start Date </th>
                       <th>Planned End Date</th>
-                      <th>Pending Action Plan</th>
+                     
                       <th>Status </th>
+                      <th>Pending Action Plan</th>
+                      <th>% Closure</th>
 
                       <th *ngIf="isSuperAdmin || isPlanner">Action </th>
                     </tr>
@@ -112,12 +114,15 @@
                       <td>{{item.otherLocation}}</td>
                       <td>{{item.plannedStartDate | date:dateFormate}}</td>
                       <td>{{item.plannedEndDate | date:dateFormate}}</td>
-                      <td><button class="btn btn-primary" (click)="pendingAction()">To be Received</button></td>
-                      <td><p [ngClass]="item.status">{{item.status}} </p></td>
+                    
+                      
                       <td *ngIf="isSuperAdmin || isPlanner">
                         <a (click)="viewPlan(item)"><img src="../../../../assets/icon/view.png" class="viwe_iamge"></a>
                         <a *ngIf="isSuperAdmin" (click)="assign(item)" data-toggle="tooltip" data-placement="top" title="Add Auditor"><img src="../../../../assets/icons/audit.png" class="viwe_iamge"></a>
                       </td>
+                      <td><p [ngClass]="item.status">{{item.status}} </p></td>
+                      <td><button class="btn btn-primary" (click)="pendingAction()">To be Received</button></td>
+                      <td>20%</td>
                     </tr>
                   </tbody>
                 </table>
@@ -139,6 +144,72 @@
                   </li>
                 </ul>
               </nav>
+              <div class="table-responsive max_hei_table">
+                <table id="example2" class="table table-bordered table-hover">
+                  <thead>
+                    <tr class="now_rap text-center sticky_header">
+                      <th>Total Point Raised</th>
+                      <th>Closure</th>
+                      <th>Verify</th>
+                      <th>Closed</th>
+                      <th>Partailly Closed</th>
+                      <th>Open</th>
+                      <th>Point Pending from Vendor</th>
+
+
+                      </tr>
+                      </thead>
+                      <tbody class="text-center">
+                        <tr>
+                          <td>10</td>
+                          <td>6</td>
+                          <td>4</td>
+                          <td>2</td>
+                          <td>1</td>
+                          <td>1</td>
+                          <td>5</td>
+                        </tr>
+                        </tbody>
+                      </table>
+                </div>
+                <div class="table-responsive max_hei_table">
+                  <table id="example2" class="table table-bordered table-hover">
+                    <thead>
+                      <tr class="now_rap text-center sticky_header">
+                        <th> Points </th>
+                        <th>Closure</th>
+                        <th>Evidence</th>
+                       <th>Status</th>
+  
+  
+                        </tr>
+                        </thead>
+                        <tbody class="text-center">
+                          <tr>
+                            <td>1</td>
+                            <td>Will make a standard</td>
+                            <td><a href="" data-toggle="tooltip" data-placement="top" title="Click here for download">List of racks</a></td>
+                            <td><button class="btn btn-success">closed</button></td>
+                            
+                          </tr>
+                        
+                          <tr>
+                            <td>1</td>
+                            <td>Will make a standard</td>
+                            <td><a href="" data-toggle="tooltip" data-placement="top" title="Click here for download">List of racks</a></td>
+                            <td><button class="btn btn-primary">Partially Closed</button></td>
+                            
+                          </tr>
+                          <tr>
+                            <td>1</td>
+                            <td>Will make a standard</td>
+                            <td><a href="" data-toggle="tooltip" data-placement="top" title="Click here for download">List of racks</a></td>
+                            <td><button class="btn btn-danger">open</button></td>
+                            
+                          </tr>
+                          </tbody>
+                        </table>
+                  </div>
             </div>
           </div>
         </div>
