--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -102,14 +102,14 @@
                   </p>
                 </a>
               </li>
-              <li class="nav-item" *ngIf="isAuditor"> 
+              <!-- <li class="nav-item" *ngIf="isAuditor"> 
                 <a routerLink="/dashboard/action-pending-plan" class="nav-link">
                   <img src="../../assets/icons/planning.png" class="side_img">
                   <p>
                     RESULT OF VERIFICATION
                   </p>
                 </a>
-              </li>
+              </li> -->
             </ul>
           </li>
           <li class="nav-item">
